implement put and delete - put single blob - put directory recusively by glob pattern - delete hyperdrive url recursively

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "corestore": "^6.0.1-alpha.19",
     "hyperdrive": "^11.0.0-alpha.1",
     "hyperswarm": "^4.2.0",
+    "pull-files": "^1.1.0",
+    "pull-stream": "^3.6.14",
     "random-access-memory": "^5.0.0"
   },
   "devDependencies": {
