--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "serve hyperdrive contents over http",
   "type": "module",
   "main": "index.js",
+  "bin": "bin.js",
   "scripts": {
     "lint": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,8 +22,11 @@
   "license": "MIT",
   "dependencies": {
     "corestore": "^6.0.1-alpha.19",
+    "debug": "^4.3.4",
     "hyperdrive": "^11.0.0-alpha.1",
     "hyperswarm": "^4.2.0",
+    "minimist2": "^1.0.2",
+    "msgpackr": "^1.6.2",
     "pull-files": "^1.1.0",
     "pull-stream": "^3.6.14",
     "random-access-memory": "^5.0.0"
